--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "next start",
     "lint": "eslint"
   },
+  "overrides": {
+    "react-latex-next": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
+  },
   "dependencies": {
     "appwrite": "^21.4.0",
     "framer-motion": "^12.23.24",
